GroupAssignation - Updated group assignation methods
