# CM.Portal/src/app/api/models/assign-group-details-dto.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { GroupDetailsDto } from './group-details-dto';
+export interface AssignGroupDetailsDto {
+  group1?: GroupDetailsDto;
+  group2?: GroupDetailsDto;
+}
